# geocoordinatecalculator

./: CMakeLists.txt  README.md  angle.cpp  angle.h  geocoordinatecalculator.pro  location.cpp  location.h  main.cpp  main.h  utils.cpp  utils.h
